2006-11-01  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: removed frames. Saves a few pixels
	and reduces visual clutter.

2006-11-01  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.c: always deal with embedded color profiles.

	* app/dialogs/preferences-dialog.c: reordered items in Color
	Management section, added some spacing.

	* app/config/gimprc-blurbs.h
	* libgimpconfig/gimpcolorconfig.c
	* plug-ins/common/lcms.c: string changes for consistency.

2006-11-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: redid the dialog without using markup.

2006-11-01  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrendererpalette.c
	(gimp_view_renderer_palette_render): make sure we calculate the
	right number of columns and don't render more cells than columns
	in one row.

2006-11-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: improved dialog.

2006-11-01  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h: use "GIMP", not "the GIMP".

2006-11-01  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdataeditor.c
	* app/widgets/gimppaletteeditor.c: set the editable state, not the
	sensitivity of the entries according to the data's editable state.

2006-11-01  Sven Neumann  <sven@gimp.org>

	* app/core/core-enums.[ch]: string change.

	* app/dialogs/preferences-dialog.c: added a combo box for the
	color-profile-policy.

2006-11-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: in interactive mode, return an extra
	boolean indicating the choice for the "Don't ask me again" toggle.

	* app/plug-in/plug-in-icc-profile.c: look for the extra return
	value and update the "color-profile-policy" in gimprc.

2006-11-01  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimppluginprocframe.c
	(gimp_plug_in_proc_frame_get_return_vals): no need to truncate the
	GValueArray if the plug-in returned too much values, simply return
	all values instead.

2006-10-31  Sven Neumann  <sven@gimp.org>
